<resources>
    <string name="app_name">SantaFesacho</string>
    <string name="titulo">SantaFesacho</string>
    <string name="username">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="salir">Salir</string>
    <string name="Rusuario">Nombre de Usuario</string>
    <string name="Rcontrasena">Ingrese contraseña</string>
    <string name="Rrepcontrasena">Repita la contraseña</string>
    <string name="correo">Correo electronico</string>
    <string name="cancelar">Cancelar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Username">Nombre de usuario:</string>
    <string name="Contra">Contraseña:</string>
    <string name="mail">Correo:</string>
    <string name="Volver">Volver</string>
    <string name="Hoteles">Hoteles</string>
    <string name="Atractivos">Atractivos</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="Lugares">Lugares</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hotel">Hoteles</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Inicio">Inicio</string>
    <string name="title_activity_lugares">Lugares</string>
    <string name="title_activity_restaurantes">Restaurantes</string>
    <string name="HotelColonial">Colonial Nueva Granada</string>
    <string name="THotelColonial">Dirección: Cl. 9 #7-47, Santa Fé de Antioquia, Antioquia, Teléfono: 305 3029978</string>
    <string name="HotelMariscal">Mariscal Robledo</string>
    <string name="THotelMariscal">Dirección: Cra. 12, Santa Fé de Antioquia, Antioquia, Teléfono: (4) 8531111</string>
    <string name="HotelPorton">Porton Del Sol</string>
    <string name="THotelPorton">Dirección: 05001100, Santa Fé de Antioquia, Antioquia, Teléfono: (4) 4483510</string>
    <string name="Main">Principal</string>
    <string name="RestLacomedia">La Comedia</string>
    <string name="TrestLacomedia">Dirección: Cra. 8 #10103, Santa Fé de Antioquia, Antioquia, Teléfono: 301 5963032</string>
    <string name="RestPorton">El Porton Del Parque</string>
    <string name="Trestporton">Dirección: Cl. 10 #11-3, Santa Fé de Antioquia, Antioquia</string>
    <string name="RestNuesp">Nueva España</string>
    <string name="Trestnuesp">Calle 10 Numero 12-48, Santa Fe de Antioquia 057050, Colombia, Tel:+(57)8532770</string>
    <string name="LugPa">Parque Central</string>
    <string name="lugpue">Puente de Occidente</string>
    <string name="LugCalle">Calles Coloniales</string>
    <string name="tama">Festival de cine: Es una fiesta cinematográfica que se realiza durante 5 días. Se ha llevado a cabo en 12 ocasiones y en la actualidad se prepara la número 13.</string>
    <string name="semana">Semana santa: Con más de 350 años, la Semana Santa mayor de la Ciudad Madre es la más antigua del departamento y una de las más solemnes y bellas de todo el país.</string>
    <string name="preparate">Preparate para:</string>
    <string name="title_activity_nav_drawer">Ubicate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="Bares">Bares</string>
    <string name="title_activity_nav_hotel">Hoteles</string>
    <string name="title_activity_nav_lugares">Lugares</string>
    <string name="title_activity_nav_restaurantes">Restaurantes</string>
    <string name="title_activity_nav_perfil">Perfil</string>
    <string name="title_activity_nav_festivales">Eventos y noticias</string>
    <string name="title_activity_fest1">Eventos</string>
    <string name="title_activity_fest2">Eventos</string>
    <string name="title_activity_fest3">Eventos</string>
    <string name="Interes1">Dia de los Diablitos</string>
    <string name="desInteres1">El 28 de diciembre.</string>
    <string name="fechaInteres1">Diciembre</string>
    <string name="Festivales">Eventos</string>
    <string name="Santa">Semana Santa</string>
    <string name="Diablitos">Festival de los Diablitos</string>
    <string name="TDiablitos">del 22 al 31 de diciembre se celebran las fiestas tradicionales de los diablitos. Estas fiestas datan de 1653 y su inicio se dio en una época en la cual el municipio estaba dividido en grandes haciendas, trabajadas por esclavos que disponían de un solo día de descanso anual, que normamente era el 28 de diciembre.</string>
    <string name="holly">Según se deduce de la lectura de lo que nos dejaron escrito los viejos historiadores, la traída de imágenes y vida de personajes, bien parece que los orígenes de procesiones de la semana santa se remonta a la mitad del siglo XVII, tiempo en que se fueron organizando paulatinamente a medida que se conformaban cofradías y se levantaban altares en los templos dedicados a los santos.</string>
    <string name="Tamarindos">Festival de los Tamarindos</string>
    <string name="TTamarindos">Las fiestas del tamarindo se llevan a cabo todos los años en los municipios de occidente, donde la alegria y los grandes eventos se toman las calles florecientes y amarillas por los frutos de la tierra.</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_mapa_w">MapaWActivity</string>
    <string name="intro_text">Long click to exit the map.</string>
    <string name="saludo">En Santa Fe de Antioquia podes encontrar:</string>
    <string name="Ubicate">Ubicate</string>
    <string name="verenmapa">Ver en mapa</string>

    <string name="Dessanta">Con más de 350 años, es una de las más solemnes y bellas de todo el país.</string>
    <string name="Destama">Acontecida anualmente en el occidente en el mes de Agosto.</string>
    <string name="Desdiablo">Del 22 al 31 de diciembre se celebran las fiestas tradicionales de los diablitos.</string>
    <string name="Abril">Abril</string>
    <string name="Agosto">Agosto</string>
    <string name="Diciembre">Diciembre</string>

</resources>
