<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mFestivales"
            android:title="@string/Festivales"
            android:icon="@drawable/ieventos"/>
        <item
            android:id="@+id/mHoteles"
            android:title="@string/Hoteles"
            android:icon="@drawable/ihotel"/>
        <item
            android:id="@+id/mRestaurantes"
            android:title="@string/Restaurantes"
            android:icon="@drawable/irestaurante"/>
        <item
            android:id="@+id/mLugares"
            android:title="@string/Lugares"
            android:icon="@drawable/ilugares"/>
        <item
            android:id="@+id/mUbicate"
            android:title="@string/Ubicate"
            android:icon="@drawable/iubicate"/>
            </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mLogOut"
            android:title="@string/salir" />
    </group>

</menu>
