<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        tools:context="com.example.ricardo.santafesacho.LoginActivity"
        android:background="@drawable/occi"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/titulo"
            android:textColor="@color/green"
            android:textSize="45dp"
            android:gravity="center"
            android:layout_marginBottom="125dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/usuario"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:gravity="center"
            android:id="@+id/eUsuario"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/eContrasena"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/ingresar"
            android:gravity="center"
            android:background="@color/greenyellow"
            android:id="@+id/bIngresar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrarse"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:gravity="center"
            android:id="@+id/tRegistrarse"
            android:layout_marginBottom="150dp"/>

    </LinearLayout>